--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="./js/main.js"></script>
-<script src="./slick/slick.min.js"></script>
+<script src="js/main.js"></script>
+<script src="slick/slick.min.js"></script>
 
 
 </html>
