--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <!--  -->
-    <link rel="stylesheet" href="/slick/slick.css">
-    <link rel="stylesheet" href="/slick/slick-theme.css">
-    <link rel="stylesheet" href="./css/utility.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
+    <link rel="stylesheet" href="css/utility.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <title>Creative Space Interior Designer and Decorator, Best Intirior Designer In Prayagraj </title>
 </head>
 
@@ -420,8 +420,8 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="./js/main.js"></script>
-<script src="./slick/slick.min.js"></script>
+<script src="js/main.js"></script>
+<script src="slick/slick.min.js"></script>
 
 
 </html>
