--- a/index.html
+++ b/index.html
@@ -288,6 +288,11 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="gallary-cta">
+                <button><a href="gallary.html"> SEE MORE</a></button>
+      
+            </div>
         </div>
 
         <!-- *****************************************testimonials******************************************************-->
